# email-parser

./: README.md  config.py  index.html  pyproject.toml  quickstart.py
my_parser/: __init__.py  credentials.json  my_parser.py  my_parser_file.py
my_parser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
my_parser/static/css/: style.css
my_parser/templates/: index.html
parser/: email.py  index.html  init.py
parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: index.html
