[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "my_parser"
version = "0.1.0"
dependencies = [
    "arrow",
    "bs4",
    "Flask",
    "pytest",
    "pytest-mock",
    "requests",
]
requires-python = ">=3.10"


[tool.setuptools]
packages = ["my_parser"]
